--- a/land/Assembly-CSharp.csproj
+++ b/land/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
      <Compile Include="Assets\scripts\[liu] ui\UIpanneltext.cs" />
      <Compile Include="Assets\scripts\[liu] ui\dcontrol.cs" />
      <Compile Include="Assets\scripts\[liu] ui\dialogmanager.cs" />
+     <Compile Include="Assets\scripts\[liu] ui\goldUImanager.cs" />
      <Compile Include="Assets\scripts\[liu] ui\lookcamera.cs" />
      <Compile Include="Assets\scripts\[liu] ui\menu.cs" />
      <Compile Include="Assets\scripts\[liu] ui\pannelManager.cs" />
