--- a/land/Assembly-CSharp.csproj
+++ b/land/Assembly-CSharp.csproj
@@ -68,6 +68,7 @@
      <Compile Include="Assets\scripts\[liu] ui\menu.cs" />
      <Compile Include="Assets\scripts\[liu] ui\pannelManager.cs" />
      <Compile Include="Assets\scripts\[liu] ui\player.cs" />
+     <Compile Include="Assets\scripts\[liu] ui\rmenu.cs" />
      <Compile Include="Assets\scripts\[liu] ui\timelinemanager.cs" />
      <None Include="Assets\Little Heroes Mega Pack\Read me.txt" />
      <None Include="Assets\Little Heroes Mega Pack\www.meshtint.com.txt" />
