--- a/land/Assembly-CSharp.csproj
+++ b/land/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
      <Compile Include="Assets\scripts\[liu] ui\dcontrol.cs" />
      <Compile Include="Assets\scripts\[liu] ui\dialogmanager.cs" />
      <Compile Include="Assets\scripts\[liu] ui\goldUImanager.cs" />
+     <Compile Include="Assets\scripts\[liu] ui\initmode.cs" />
      <Compile Include="Assets\scripts\[liu] ui\lookcamera.cs" />
      <Compile Include="Assets\scripts\[liu] ui\menu.cs" />
      <Compile Include="Assets\scripts\[liu] ui\pannelManager.cs" />
