--- a/land/Assembly-CSharp.csproj
+++ b/land/Assembly-CSharp.csproj
@@ -64,8 +64,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\scripts\Scripts_Player_control\HairControl.cs" />
+    <Compile Include="Assets\scripts\Scripts_Player_control\Movement_Control.cs" />
     <Compile Include="Assets\scripts\[liu] ui\GameManager1.cs" />
-    <Compile Include="Assets\scripts\[liu] ui\Movement_Control.cs" />
     <Compile Include="Assets\scripts\[liu] ui\UImanager.cs" />
     <Compile Include="Assets\scripts\[liu] ui\UIpannel.cs" />
     <Compile Include="Assets\scripts\[liu] ui\UIpanneltext.cs" />
