--- a/land/Assembly-CSharp.csproj
+++ b/land/Assembly-CSharp.csproj
@@ -68,6 +68,7 @@
      <Compile Include="Assets\scripts\[liu] ui\lookcamera.cs" />
      <Compile Include="Assets\scripts\[liu] ui\menu.cs" />
      <Compile Include="Assets\scripts\[liu] ui\pannelManager.cs" />
+     <Compile Include="Assets\scripts\[liu] ui\pause.cs" />
      <Compile Include="Assets\scripts\[liu] ui\player.cs" />
      <Compile Include="Assets\scripts\[liu] ui\rmenu.cs" />
      <Compile Include="Assets\scripts\[liu] ui\timelinemanager.cs" />
