--- a/land/Assembly-CSharp.csproj
+++ b/land/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\lookperson.cs" />
      <Compile Include="Assets\scripts\Scripts_Player_control\HairControl.cs" />
      <Compile Include="Assets\scripts\Scripts_Player_control\Movement_Control.cs" />
      <Compile Include="Assets\scripts\[liu] ui\GameManager1.cs" />
