--- a/land/Assembly-CSharp.csproj
+++ b/land/Assembly-CSharp.csproj
@@ -55,8 +55,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\backmanager.cs" />
-     <Compile Include="Assets\lookperson.cs" />
      <Compile Include="Assets\scripts\Scripts_Player_control\Event.cs" />
      <Compile Include="Assets\scripts\Scripts_Player_control\HairControl.cs" />
      <Compile Include="Assets\scripts\Scripts_Player_control\Movement_Control.cs" />
@@ -64,6 +62,7 @@
      <Compile Include="Assets\scripts\[liu] ui\UImanager.cs" />
      <Compile Include="Assets\scripts\[liu] ui\UIpannel.cs" />
      <Compile Include="Assets\scripts\[liu] ui\UIpanneltext.cs" />
+     <Compile Include="Assets\scripts\[liu] ui\backmanager.cs" />
      <Compile Include="Assets\scripts\[liu] ui\dcontrol.cs" />
      <Compile Include="Assets\scripts\[liu] ui\dialogmanager.cs" />
      <Compile Include="Assets\scripts\[liu] ui\goldUImanager.cs" />
@@ -71,6 +70,7 @@
      <Compile Include="Assets\scripts\[liu] ui\initmode.cs" />
      <Compile Include="Assets\scripts\[liu] ui\land.cs" />
      <Compile Include="Assets\scripts\[liu] ui\lookcamera.cs" />
+     <Compile Include="Assets\scripts\[liu] ui\lookperson.cs" />
      <Compile Include="Assets\scripts\[liu] ui\menu.cs" />
      <Compile Include="Assets\scripts\[liu] ui\pannelManager.cs" />
      <Compile Include="Assets\scripts\[liu] ui\pause.cs" />
